# taskpay

./: .gitignore  README.md  package-lock.json  package.json
contracts/: Cargo.toml  todo_payments.rs
contracts/src/: lib.rs  todo_payments.rs
contracts/tests/: contract.rs
src/app/: globals.css  layout.tsx  page.tsx
src/components/: ContractStrip.tsx  CreateTaskForm.tsx  StatsGrid.tsx  TaskBoard.tsx  ToastStack.tsx  WalletCard.tsx
src/lib/: freighter.ts  storage.ts  taskpay-types.ts
